Update email contact information in index.htmlemail-update

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       <section>
         <h1>Quarterly Earnings Report</h1>
         <h3>Modern interactive deliverable</h3>
-        <p class="email">Contact: 24ds1000070@ds.study.iitm.ac.in</p>
+        <p class="email"> Contact: 24ds1000070@ds.study.iitm.ac.in</p>
+          <!-- SIMPLE PLAIN-TEXT EMAIL -->
+        <p>24ds1000070@ds.study.iitm.ac.in</p>
         <p class="footer">Prepared by: Technical Consulting — Q<sub>n</sub> FY</p>
         <aside class="notes">Open with 2–3 sentence headline: revenue vs estimates, key drivers, ask for questions at the end.</aside>
       </section>
