--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         <p class="email"> Contact: 24ds1000070@ds.study.iitm.ac.in</p>
           <!-- SIMPLE PLAIN-TEXT EMAIL -->
         <p>24ds1000070@ds.study.iitm.ac.in</p>
-        <p class="footer">Prepared by: Technical Consulting — Q<sub>n</sub> FY</p>
         <aside class="notes">Open with 2–3 sentence headline: revenue vs estimates, key drivers, ask for questions at the end.</aside>
       </section>
 
@@ -57,6 +56,8 @@
           <li class="fragment">Cost discipline improving gross margin</li>
           <li class="fragment">Investments in risk & compliance being capitalized</li>
         </ul>
+        <p>24ds1000070@ds.study.iitm.ac.in</p>
+
         <aside class="notes">Each fragment will appear on click — use to narrate three distinct points.</aside>
       </section>
 
@@ -80,6 +81,8 @@ print(f"ROI: {roi(120000, 80000):.2f}%")
         <p>\[\mathrm{NPV} = \sum_{t=0}^{T} \frac{C_t}{(1 + r)^t}\]</p>
         <p class="fragment">Where: <em>\(C_t\)</em> are cash flows, <em>\(r\)</em> is the discount rate.</p>
         <aside class="notes">Point to the discount rate sensitivity and reference scenario analysis in the appendix.</aside>
+        <p>24ds1000070@ds.study.iitm.ac.in</p>
+
       </section>
 
       <!-- Slide with an embedded small table (HTML) -->
@@ -93,7 +96,9 @@ print(f"ROI: {roi(120000, 80000):.2f}%")
             <tr><td>Net Income</td><td>$18M</td><td>$15M</td></tr>
           </tbody>
         </table>
-        <aside class="notes">Highlight the margin improvements and call out any exceptional items.</aside>
+        <aside class="notes">Highlight the margin improvements and call out any exceptional items.</aside>       
+        <p>24ds1000070@ds.study.iitm.ac.in</p>
+
       </section>
 
       <!-- Fragmented chart placeholder -->
@@ -101,7 +106,9 @@ print(f"ROI: {roi(120000, 80000):.2f}%")
         <h2>Trend: Revenue by Segment</h2>
         <p class="fragment">(Interactive chart would be embedded here in a real build — use D3/Chart.js)</p>
         <p class="fragment">Segment A: 55% • Segment B: 30% • Other: 15%</p>
-        <aside class="notes">Describe segments and growth drivers; switch to appendix for deep-dive numbers.</aside>
+        <aside class="notes">Describe segments and growth drivers; switch to appendix for deep-dive numbers.</aside>       
+        <p>24ds1000070@ds.study.iitm.ac.in</p>
+
       </section>
 
       <!-- Contact / Closing slide -->
@@ -112,7 +119,9 @@ print(f"ROI: {roi(120000, 80000):.2f}%")
           <li class="fragment">Share detailed financial model (by request)</li>
           <li class="fragment">Schedule a stakeholder Q&A</li>
         </ol>
-        <aside class="notes">Wrap up with a clear ask and available support items.</aside>
+        <aside class="notes">Wrap up with a clear ask and available support items.</aside>      
+        <p>24ds1000070@ds.study.iitm.ac.in</p>
+
       </section>
 
     </div>
