Add email address to Quarterly Earnings Report slide
Added email address to the title slide section.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <!-- Title slide -->
       <section>
         <h1>Quarterly Earnings Report</h1>
+        <p>24ds1000070@ds.study.iitm.ac.in</p>  <!-- REQUIRED PLAIN TEXT EMAIL -->
         <h3>Modern interactive deliverable</h3>
         <p class="email"> Contact: 24ds1000070@ds.study.iitm.ac.in</p>
           <!-- SIMPLE PLAIN-TEXT EMAIL -->
